Fix GitHub link in SideBarFooter.astro

--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -40,7 +40,7 @@
 
         
     </a>
-    <a href="https://github.com/lennemo09" target="_blank" class="mx-3" aria-label="Github" title="Github">
+    <a href="https://github.com/lenl09" target="_blank" class="mx-3" aria-label="Github" title="Github">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
