--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -10,6 +10,27 @@ import HorizontalCardPublication from "../components/HorizontalCardPublication.a
   </div>
 
   <HorizontalCardPublication
+    badge="Preprint"
+    title="Revealing Fine Structure in Protoplanetary Disks with Physics Constrained Neural Fields"
+    authors={["Aviad Levis", "Nhan Luong", "Richard Teague", "Katherine. L. Bouman", "Marcelo Barraza-Alfaro", "Kevin Flaherty"]}
+    author_index={1}
+    img="/images/projects/radjax.jpg"
+    abstract="Protoplanetary disks are the birthplaces of planets, and resolving their three-dimensional structure is key to understanding disk evolution. The unprecedented resolution of ALMA demands modeling approaches that capture features beyond the reach of traditional methods. We introduce a computational framework that integrates physics-constrained neural fields with differentiable rendering and present RadJAX, a GPU-accelerated, fully differentiable line radiative transfer solver achieving up to 10,000x speedups over conventional ray tracers, enabling previously intractable, high-dimensional neural reconstructions. Applied to ALMA CO observations of HD 163296, this framework recovers the vertical morphology of the CO-rich layer, revealing a pronounced narrowing and flattening of the emission surface beyond 400 au - a feature missed by existing approaches. Our work establish a new paradigm for extracting complex disk structure and advancing our understanding of protoplanetary evolution."
+    url="https://arxiv.org/abs/2509.03623"
+  />
+
+  <HorizontalCardPublication
+    badge="Nature Synthesis"
+    title="Algorithmic Iterative Reticular Synthesis of Zeolitic Imidazolate Framework Crystals"
+    authors={["Z. Rong", "Z. Chen", "F. Luong", "S. Chheda", "N. Luong", "Z. Zheng", "K. Greco", "A. Alghamdi", "K. H. Bui", "T. J. Inizan", "T. Nguyen-Dang", "H. H. Pham", "D. Le", "J. Sauer", "V. B. T. Phung", "J. Chayes", "C. Borgs", "M. Boley", "L. E. Ghaoui", "O. M. Yaghi"]}
+    author_index={1}
+    img="/images/projects/aires.jpg"
+    abstract="The discovery of crystalline reticular materials remains largely trial-and-error despite their societal importance. We introduce an Algorithmic Iterative Reticular Synthesis (AIRES) cycle, which integrates automated synthesis, image recognition, single crystal X-ray diffraction, and customized algorithmic decision-making—crucially, to maximize distinct crystal discoveries rather than optimizing single targets. Demonstrated on zeolitic imidazo44 late frameworks (ZIFs), AIRES achieved twice the discovery rate of random exploration, crystallizing 10 new linkers into diverse ZIF topologies and expanding the single-linker Zn-ZIF library by one-third. By transforming reticular synthesis from an empirical pro47 cess to a systematic exploration, AIRES provides a scalable and efficient blueprint for accelerating materials discovery."
+    url="/"
+  />
+
+
+  <HorizontalCardPublication
     badge="MICCAI 2024"
     title="Training-Free Condition Video Diffusion Models for single frame Spatial-Semantic Echocardiogram Synthesis"
     authors={["Van Phi Nguyen", "Tri Nhan Luong Ha", "Huy Hieu Pham", "Quoc Long Tran"]}
@@ -29,7 +50,7 @@ import HorizontalCardPublication from "../components/HorizontalCardPublication.a
   />
   <div class="divider my-0"></div>
   <HorizontalCardPublication
-    badge="Optics Letters (Vol. 49, Issue 9)"
+    badge="Optics Letters"
     title="Spatial photoluminescence and lifetime mappings of quasi-2D perovskites coupled with a dielectric metasurface"
     authors={["Hai Xuan Son Bui", "Tuyet Thi Doan", "Nhan Ha Tri Luong", "Dang Khue Luu", "Ha Thi Thu Do", "Linh Ha Chu", "Duong Pham", "Oanh Thi Kim Vu", "Son Tung Bui", "Thuat Tran Nguyen", "Xuan Khuyen Bui", "Dinh Lam Vu", "Hai Son Nguyen", "Tung Son Ha", "Quynh Le-Van"]}
     author_index={2}
