--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ const last_posts = posts.slice(0, 3);
             <p class="py-2">
               You can email me at:
               <ul>
-                <li>• <a class="link" href="mailto:len@cs.toronto.edu">len@cs.toronto.edu</a>/<a class="link" href="mailto:len@cs.toronto.edu">len@dgp.toronto.edu</a> for work-related enquiries, or</li>
+                <li>• <a class="link" href="mailto:len@cs.toronto.edu">len@cs.toronto.edu</a> for work-related enquiries, or</li>
                 <li>• <a class="link" href="mailto:hatrinhanluong@gmail.com">hatrinhanluong@gmail.com</a> for other matters.</li>
               </ul>
             </p>
@@ -100,6 +100,12 @@ const last_posts = posts.slice(0, 3);
 
     <ul class="list-disc mx-6 mb-10 grid gap-2">
       <li>
+        <b>[04/09/25]</b> Our paper preprint for <a target="_blank" href="https://arxiv.org/abs/2509.03623" class="font-medium underline hover:no-underline"><b>Revealing Fine Structure in Protoplanetary Disks with Physics Constrained Neural Fields</b></a> is now available on arXiv. 
+      </li>
+      <li>
+        <b>[04/09/25]</b> Our paper  <b>Algorithmic Iterative Reticular Synthesis of Zeolitic Imidazolate Framework Crystals</b> has been accepted to Nature Synthesis! 
+      </li>
+      <li>
         <b>[17/06/24]</b> Our paper <a target="_blank" href="https://arxiv.org/abs/2408.03035" class="font-medium underline hover:no-underline"><b>Training-Free Condition Video Diffusion Models for single frame Spatial-Semantic Echocardiogram Synthesis</b></a> has been accepted to MICCAI 2024! The preprint is also now available on arXiv. 
       </li>
       <li>
@@ -141,9 +147,29 @@ const last_posts = posts.slice(0, 3);
   </div>
 
   <HorizontalCardPublication
+    badge="Preprint"
+    title="Revealing Fine Structure in Protoplanetary Disks with Physics Constrained Neural Fields"
+    authors={["Aviad Levis", "Nhan Luong", "Richard Teague", "Katherine. L. Bouman", "Marcelo Barraza-Alfaro", "Kevin Flaherty"]}
+    author_index={1}
+    img="/images/projects/radjax.jpg"
+    abstract="Protoplanetary disks are the birthplaces of planets, and resolving their three-dimensional structure is key to understanding disk evolution. The unprecedented resolution of ALMA demands modeling approaches that capture features beyond the reach of traditional methods. We introduce a computational framework that integrates physics-constrained neural fields with differentiable rendering and present RadJAX, a GPU-accelerated, fully differentiable line radiative transfer solver achieving up to 10,000x speedups over conventional ray tracers, enabling previously intractable, high-dimensional neural reconstructions. Applied to ALMA CO observations of HD 163296, this framework recovers the vertical morphology of the CO-rich layer, revealing a pronounced narrowing and flattening of the emission surface beyond 400 au - a feature missed by existing approaches. Our work establish a new paradigm for extracting complex disk structure and advancing our understanding of protoplanetary evolution."
+    url="https://arxiv.org/abs/2509.03623"
+  />
+
+  <HorizontalCardPublication
+    badge="Nature Synthesis"
+    title="Algorithmic Iterative Reticular Synthesis of Zeolitic Imidazolate Framework Crystals"
+    authors={["Z. Rong", "Z. Chen", "F. Luong", "S. Chheda", "N. Luong", "Z. Zheng", "K. Greco", "A. Alghamdi", "K. H. Bui", "T. J. Inizan", "T. Nguyen-Dang", "H. H. Pham", "D. Le", "J. Sauer", "V. B. T. Phung", "J. Chayes", "C. Borgs", "M. Boley", "L. E. Ghaoui", "O. M. Yaghi"]}
+    author_index={1}
+    img="/images/projects/aires.jpg"
+    abstract="The discovery of crystalline reticular materials remains largely trial-and-error despite their societal importance. We introduce an Algorithmic Iterative Reticular Synthesis (AIRES) cycle, which integrates automated synthesis, image recognition, single crystal X-ray diffraction, and customized algorithmic decision-making—crucially, to maximize distinct crystal discoveries rather than optimizing single targets. Demonstrated on zeolitic imidazo44 late frameworks (ZIFs), AIRES achieved twice the discovery rate of random exploration, crystallizing 10 new linkers into diverse ZIF topologies and expanding the single-linker Zn-ZIF library by one-third. By transforming reticular synthesis from an empirical pro47 cess to a systematic exploration, AIRES provides a scalable and efficient blueprint for accelerating materials discovery."
+    url="/"
+  />
+
+  <HorizontalCardPublication
     badge="MICCAI 2024"
     title="Training-Free Condition Video Diffusion Models for single frame Spatial-Semantic Echocardiogram Synthesis"
-    authors={["Van Phi Nguyen", "Tri Nhan Luong Ha", "Huy Hieu Pham", "Quoc Long Tran"]}
+    authors={["Van Phi Nguyen", "Nhan Luong", "Huy Hieu Pham", "Quoc Long Tran"]}
     author_index={1}
     img="/images/projects/miccai.jpg"
     abstract="Conditional video diffusion models (CDM) have shown promising results for video synthesis, potentially enabling the generation of realistic echocardiograms to address the problem of data scarcity. However, current CDMs require a paired segmentation map and echocardiogram dataset. We present a new method called Free-Echo for generating realistic echocardiograms from a single end-diastolic segmentation map without additional training data. Our method is based on the 3D-Unet with Temporal Attention Layers model and is conditioned on the segmentation map using a training-free conditioning method based on SDEdit. We evaluate our model on two public echocardiogram datasets, CAMUS and EchoNet-Dynamic. We show that our model can generate plausible echocardiograms that are spatially aligned with the input segmentation map, achieving performance comparable to training-based CDMs. Our work opens up new possibilities for generating echocardiograms from a single segmentation map, which can be used for data augmentation, domain adaptation, and other applications in medical imaging."
@@ -152,7 +178,7 @@ const last_posts = posts.slice(0, 3);
   <HorizontalCardPublication
     badge="Preprint"
     title="Exploring the Practicality of Federated Learning: A Survey Towards the Communication Perspective"
-    authors={["Khiem Le*", "Nhan Luong-Ha*", "Manh Nguyen-Duc", "Danh Le-Phuoc", "Cuong Do", "Kok-Seng Wong"]}
+    authors={["Khiem Le*", "Nhan Luong*", "Manh Nguyen-Duc", "Danh Le-Phuoc", "Cuong Do", "Kok-Seng Wong"]}
     author_index={1}
     img="/images/projects/fl_taxonomy.png"
     abstract="Federated Learning (FL) is a promising paradigm that offers significant advancements in privacy-preserving, decentralized machine learning by enabling collaborative training of models across distributed devices without centralizing data. However, the practical deployment of FL systems faces a significant bottleneck: the communication overhead caused by frequently exchanging large model updates between numerous devices and a central server. This communication inefficiency can hinder training speed, model performance, and the overall feasibility of real-world FL applications. In this survey, we investigate various strategies and advancements made in communication-efficient FL, highlighting their impact and potential to overcome the communication challenges inherent in FL systems. Specifically, we define measures for communication efficiency, analyze sources of communication inefficiency in FL systems, and provide a taxonomy and comprehensive review of state-of-the-art communication-efficient FL methods. Additionally, we discuss promising future research directions for enhancing the communication efficiency of FL systems. By addressing the communication bottleneck, FL can be effectively applied and enable scalable and practical deployment across diverse applications that require privacy-preserving, decentralized machine learning, such as IoT, healthcare, or finance."
@@ -160,7 +186,7 @@ const last_posts = posts.slice(0, 3);
   />
   <div class="divider my-0"></div>
   <HorizontalCardPublication
-    badge="Optics Letters (Vol. 49, Issue 9)"
+    badge="Optics Letters"
     title="Spatial photoluminescence and lifetime mappings of quasi-2D perovskites coupled with a dielectric metasurface"
     authors={["Hai Xuan Son Bui", "Tuyet Thi Doan", "Nhan Ha Tri Luong", "Dang Khue Luu", "Ha Thi Thu Do", "Linh Ha Chu", "Duong Pham", "Oanh Thi Kim Vu", "Son Tung Bui", "Thuat Tran Nguyen", "Xuan Khuyen Bui", "Dinh Lam Vu", "Hai Son Nguyen", "Tung Son Ha", "Quynh Le-Van"]}
     author_index={2}
