fixed small typo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ const last_posts = posts.slice(0, 3);
             <div class="mt-4 leading-normal text-md ">Outside of research, I enjoy reading and learning about sciences, philosophy, and visual arts. I'm a hobbyist photographer, with a particular interest in still life, pets, and street photography.</div>
             <div class="mt-4 leading-normal text-md ">I have two cats, <span class="tooltip" data-tip="Cam (as in camera 📸, but is also 🇻🇳 for orange 🍊) and Chanh (🇻🇳 for lemon 🍋). It's a quirky double word play which was absolutely not intentional.">Cam and Chanh</span>, and you can find them <a class="btn btn-outline px-1 min-h-0 h-6 p-0" target="_blank" href="https://www.instagram.com/cameowra.roll/">here</a>.</div>
             <Image class="mt-4 mask rounded-3xl" format="webp" width={650} height={350} src="/camchanh.jpg" alt="Cam (right) & Chanh (left)" />
-            <div class="mt-4 leading-normal text-md ">When I have the chance, you'll probably find me underwater! I love scuba diving and freediving (fun fact: I got to see a whaleshark on my second ever dive)! I'm also enthusiastic for casual badminton matches here and there (though I'm not very good). Archery is next on my adventure list! </div>
+            <div class="mt-4 leading-normal text-md ">I love scuba diving (fun fact: I got to see a whaleshark on my second ever dive), my next goal is to learn how to freedive! </div>
           </div>
         </div>
 
@@ -65,16 +65,6 @@ const last_posts = posts.slice(0, 3);
               <p>Toronto, ON M5S 2E4</p>
             </p>
 
-            <!-- <p class="py-2 mt-2">
-              Department mailing address:
-            </p>
-            <p>
-              <p>Ha Tri Nhan Luong</p>
-              <p>Department of Computer Science</p>
-              <p>University of Toronto</p>
-              <p>40 St. George Street, Rm. 4283</p>
-              <p>Toronto, Ontario CANADA M5S 2E4​​​​​​​</p>
-            </p> -->
           </div>
         </div>
 
@@ -160,7 +150,7 @@ const last_posts = posts.slice(0, 3);
     badge="Nature Synthesis"
     title="Algorithmic Iterative Reticular Synthesis of Zeolitic Imidazolate Framework Crystals"
     authors={["Z. Rong", "Z. Chen", "F. Luong", "S. Chheda", "N. Luong", "Z. Zheng", "K. Greco", "A. Alghamdi", "K. H. Bui", "T. J. Inizan", "T. Nguyen-Dang", "H. H. Pham", "D. Le", "J. Sauer", "V. B. T. Phung", "J. Chayes", "C. Borgs", "M. Boley", "L. E. Ghaoui", "O. M. Yaghi"]}
-    author_index={1}
+    author_index={4}
     img="/images/projects/aires.jpg"
     abstract="The discovery of crystalline reticular materials remains largely trial-and-error despite their societal importance. We introduce an Algorithmic Iterative Reticular Synthesis (AIRES) cycle, which integrates automated synthesis, image recognition, single crystal X-ray diffraction, and customized algorithmic decision-making—crucially, to maximize distinct crystal discoveries rather than optimizing single targets. Demonstrated on zeolitic imidazo44 late frameworks (ZIFs), AIRES achieved twice the discovery rate of random exploration, crystallizing 10 new linkers into diverse ZIF topologies and expanding the single-linker Zn-ZIF library by one-third. By transforming reticular synthesis from an empirical pro47 cess to a systematic exploration, AIRES provides a scalable and efficient blueprint for accelerating materials discovery."
     url="/"
@@ -184,7 +174,7 @@ const last_posts = posts.slice(0, 3);
     abstract="Federated Learning (FL) is a promising paradigm that offers significant advancements in privacy-preserving, decentralized machine learning by enabling collaborative training of models across distributed devices without centralizing data. However, the practical deployment of FL systems faces a significant bottleneck: the communication overhead caused by frequently exchanging large model updates between numerous devices and a central server. This communication inefficiency can hinder training speed, model performance, and the overall feasibility of real-world FL applications. In this survey, we investigate various strategies and advancements made in communication-efficient FL, highlighting their impact and potential to overcome the communication challenges inherent in FL systems. Specifically, we define measures for communication efficiency, analyze sources of communication inefficiency in FL systems, and provide a taxonomy and comprehensive review of state-of-the-art communication-efficient FL methods. Additionally, we discuss promising future research directions for enhancing the communication efficiency of FL systems. By addressing the communication bottleneck, FL can be effectively applied and enable scalable and practical deployment across diverse applications that require privacy-preserving, decentralized machine learning, such as IoT, healthcare, or finance."
     url="https://arxiv.org/abs/2405.20431"
   />
-  <div class="divider my-0"></div>
+  <!-- <div class="divider my-0"></div> -->
   <HorizontalCardPublication
     badge="Optics Letters"
     title="Spatial photoluminescence and lifetime mappings of quasi-2D perovskites coupled with a dielectric metasurface"
