--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -11,8 +11,8 @@ const { sideBarActiveItemID } = Astro.props;
     <div class="w-fit mx-auto mt-5 mb-6">
       <a href="/">
         <div class="avatar transition ease-in-out hover:scale-[102%] block m-auto">
-          <div class="w-[10.5rem]">
-            <Image class="mask rounded-3xl" format="webp" width={350} height={350} src="/utorid_pic_square_small.jpg" alt="Profile image" />
+          <div class="w-[3.5rem]">
+            <Image class="mask rounded-3xl" format="webp" width={150} height={150} src="/onominute_logo_icon_color.svg" alt="Logo image" />
           </div>
         </div>
       </a>
