--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const last_posts = posts.slice(0, 3);
     <!-- RIGHT: headshot -->
     <div class="md:ml-6 md:w-56 lg:w-64 shrink-0 self-stretch rounded-2xl overflow-hidden aspect-[3/4]">
     <img
-        src="/headshot_dcs_portrait.png"
+        src="/headshot_dcs_portrait_small.jpg"
         alt="Portrait of Len"
         class="w-full h-full object-cover"
         loading="eager"
